--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,15 +35,15 @@
     });
 
     socket.on('userJoined', data => {
-      addMessage(`🔵 Usuario conectado: ${data.userId}`);
+      addMessage(`Usuario conectado: ${data.userId}`);
     });
 
-    socket.on('userLeft', data => {
-      addMessage(`⚪ Usuario desconectado: ${data.userId}`);
+    socket.on('usrLeft', data => {
+      addMessage(`Usuario desconectado: ${data.userId}`);
     });
 
     socket.on('chatMessage', data => {
-      addMessage(`🗣️ [${data.userId}]: ${data.message}`);
+      addMessage(`[${data.userId}]: ${data.message}`);
     });
 
     sendBtn.addEventListener('click', () => {
@@ -59,3 +59,6 @@
   </script>
 </body>
 </html>
+
+
+
